--- a/src/utils/styles/global.scss
+++ b/src/utils/styles/global.scss
@@ -1,6 +1,7 @@
 @import '~tailwindcss/base';
 @import '~tailwindcss/components';
 @import '~tailwindcss/utilities';
+@import './theme.scss';
 
 body {
   margin: 0;
