--- a/src/utils/styles/variable.module.scss
+++ b/src/utils/styles/variable.module.scss
@@ -3,3 +3,15 @@ $breakpount-laptopL: 1440px;
 $breakpount-laptopS: 1024px;
 $breakpount-tablet: 768px;
 $breakpount-mobile: 360px;
+
+$gray1: #f5f5f5;
+$gray2: #dcdcdc;
+$gray3: #b5b5b5;
+$gray4: #696969;
+$gray5: #595959;
+$gray6: #262626;
+$gray7: #191919;
+$gray8: #0d0d0d;
+
+$SIDEBAR_WIDTH: 120px;
+$HEADER_HEIGT: 120px;
