feat: :zap: add themeswitch component

--- a/src/components/LeftSideBar.module.scss
+++ b/src/components/LeftSideBar.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   width: $SIDEBAR_WIDTH;
 
-  & > svg {
+  & button {
     bottom: 40px;
     cursor: pointer;
     left: 40px;
