--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -1,4 +1,4 @@
-@import "../utils/styles/variable.module.scss";
+@import '../utils/styles/variable.module.scss';
 
 .header {
   -webkit-backdrop-filter: blur(50px);
@@ -7,7 +7,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 200; 
+  z-index: 200;
 }
 
 .header__nav {
