--- a/src/layout/profile/index.module.scss
+++ b/src/layout/profile/index.module.scss
@@ -1,57 +1,84 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800;900&display=swap');
+
 .container {
+  --tab-font: 1rem;
+  --tab-height: calc(var(--tab-font) * 4);
+  --avatar-size: 80px;
+  --font-base: 1rem;
+
   position: relative;
   height: 100vh;
-  background-color: #0D0D0D;
+  background-color: #191919;
+  font-family: 'Nunito Sans', sans-serif;
+  // FIXME: navbar height 
+  margin-top: 120px;
+
+  // TODO: remove it later 
+  &::before {
+    content: 'Nav Bar';
+    position: absolute;
+    background-color: #191919;
+    height: 120px;
+    width: 100vw;
+    top: -120px;
+    color: gray;
+    text-align: center;
+    line-height: 120px;
+  }
 }
 .profile_header, .profile_body {
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #0D0D0D;
+  background-color: #191919;
   color: #DCDCDC;
   width: 100vw;
   padding: 3vw 0;
-  p {
-    margin: 0;
-    padding: 0;
-  }
   &__name {
-    font-size: 1.2rem;
+    font-size: calc(var(--font-base) * 1.25);
     font-weight: 700;
+    margin: 0;
   }
   &__job {
+    font-size: calc(var(--font-base) * 0.75);
     font-weight: 300;
+    opacity: 0.7;
+    margin: 0.2rem 0 1rem;
   }
   &__rank {
-
+    font-size: calc(var(--font-base) * 0.875);
   }
   &__urls {
-
+    .icons {
+      margin: 0 10px;
+    }
   }
   &__comment {
-    
+    font-size: calc(var(--font-base) * 0.875);
   }
 }
 .profile_body {
   height: 100%;
   &.sticky {
-    margin-top: 60px;
+    margin-top: calc(var(--tab-height) + 2px);
   }
 }
 .profile_tabs {
   position: relative;
-  height: 60px;
-  padding: 1vw;
+  height: calc(var(--tab-height) + 2px);
   width: 100vw;
   text-align: center;
   border-top: 1px solid #DCDCDC;
   border-bottom: 1px solid #DCDCDC;
-  background-color: #0D0D0D;
+  background-color: #191919;
   &__item {
+    font-size: var(--tab-font);
+    line-height: calc(var(--tab-height) + 2px);
     padding: 0 1vw;
     color: #DCDCDC;
     text-decoration: none;
+    cursor: pointer;
   }
   &.sticky {
     position: fixed;
@@ -67,8 +94,9 @@
   }
   &__color {
     position: relative;
-    width: 50px;
-    height: 50px;
+    width: var(--avatar-size);
+    height: var(--avatar-size);
+    margin: 1rem;
     background-color: #B5B5B5;
     border-radius: 100%;
   }
