--- a/src/pages/mypage/index.module.scss
+++ b/src/pages/mypage/index.module.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800;900&display=swap');
+
 .mypage__form {
   display: flex;
   flex-direction: column;
@@ -10,4 +12,3 @@
     width: 100%;
   }
 }
-
