--- a/src/pages/mypage/index.module.scss
+++ b/src/pages/mypage/index.module.scss
@@ -7,8 +7,41 @@
   width: 50%;
   position: relative;
   margin: 0 auto;
-  border: 1px solid wheat;
+  padding: 2rem 0;
   &_input {
     width: 100%;
+    position: relative;
+    margin: 2rem 0;
+    label {
+      font-size: calc(var(--font-base) * 0.75);
+      color: #696969;
+      text-transform: uppercase;
+    }
+    input {
+      font-size: var(--font-base);
+      width: 100%;
+      background-color: transparent;
+      border: none;
+      border-bottom: 1px solid #DCDCDC;
+      height: 48px;
+      outline: none;
+      &::placeholder {
+        color: #DCDCDC;
+      }
+    }
+  }
+  button {
+    outline: none;
+    border: none;
+  }
+  .form__botton {
+    --btn-size: calc(var(--font-base) * 0.75); 
+    background-color: #DCDCDC;
+    text-transform: uppercase;
+    font-size: var(--btn-size);
+    padding: calc(var(--btn-size) * 1.5) calc(var(--btn-size) * 2);
+    color: #191919;
+    letter-spacing: 0.15em;
+    align-self: flex-end;
   }
 }
