--- a/src/components/LeftSideBar.module.scss
+++ b/src/components/LeftSideBar.module.scss
@@ -1,4 +1,4 @@
-@import "../utils/styles/variable.module.scss";
+@import '../utils/styles/variable.module.scss';
 
 .left_sidebar {
   height: 100vh;
@@ -9,6 +9,6 @@
     bottom: 40px;
     cursor: pointer;
     left: 40px;
-    position: fixed;
+    position: absolute;
   }
 }
