feat: implements qna page layout

--- a/src/utils/styles/theme.scss
+++ b/src/utils/styles/theme.scss
@@ -6,7 +6,7 @@ body {
 
   &.dark {
     --font-color: white;
-    --background-color: black;
+    --background-color: #191919;
   }
 
   background-color: var(--background-color);
