feat: implement question item action button

--- a/src/utils/styles/variable.module.scss
+++ b/src/utils/styles/variable.module.scss
@@ -13,6 +13,8 @@ $gray6: #262626;
 $gray7: #191919;
 $gray8: #0d0d0d;
 
+$active: #a0f;
+
 $SIDEBAR_WIDTH: 120px;
 $HEADER_HEIGT: 120px;
 $FOOTER_HEIGT: 80px;
