--- a/src/components/QuestionItem.module.scss
+++ b/src/components/QuestionItem.module.scss
@@ -1,7 +1,12 @@
 @import '../utils/styles/variable.module.scss';
 
 .questionItem {
-  @apply flex;
+  &:not(:first-of-type) {
+    @apply mt-8;
+  }
+}
+
+.questionItem__content {
   border: 1px solid #dcdcdc;
 
   .dark & {
@@ -9,10 +14,7 @@
     border-color: #191919;
   }
 
-  &:not(:first-child) {
-    @apply mt-8;
-  }
-
+  @apply flex;
 }
 
 .questionItem__answers {
@@ -79,4 +81,29 @@
   @apply text-xs;
   color: $gray4;
   margin-top: 0.25rem;
+}
+
+.questionItem__actions {
+  @apply flex items-center justify-end mt-4;
+}
+
+.actionButton {
+  @apply relative;
+
+  &:global(.active) svg path {
+    fill: $active;
+  }
+
+  &:not(:first-of-type) {
+    @apply ml-6;
+  }
+}
+
+.actionButton__thumbsUpCount {
+  @apply absolute w-4 h-5 ;
+  // TODO: replace color with variable
+  background: #191919;
+  bottom: -0.7rem;
+  font-size: 0.688rem;
+  left: -0.5rem;
 }
