--- a/src/utils/styles/global.scss
+++ b/src/utils/styles/global.scss
@@ -3,6 +3,12 @@
 @import '~tailwindcss/utilities';
 @import './theme.scss';
 
+html {
+  font-family: 'Nunito Sans', 'Spoqa Han Sans Neo', 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+}
+
 body {
   margin: 0;
   padding: 0;
