--- a/src/components/Auth/Auth.module.scss
+++ b/src/components/Auth/Auth.module.scss
@@ -1,24 +1,37 @@
 .login {
-  &__button {
-    width: 225px;
-    height: 60px;
-    border: solid 2px #c8cbcb;
-    background-color: #131314;
+  &__container {
+    width: 100%;
+    height: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
-    cursor: pointer;
-    color: #c8cbcb;
-    margin : 0 15px;
+    justify-content: center;
+  }
+  &__button {
+    width: 45px;
+    height: 45px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &:focus {
+      outline: none;
+    }
   }
   &__text {
-    width: 135px;
-    height: 21px;
-    font-size: 14px;
+    font-size: 0.8rem;
     font-stretch: normal;
     font-style: normal;
     line-height: 1.5;
     letter-spacing: normal;
     text-align: center;
+    text-transform: uppercase;
+    margin-top: 0.5rem;
+  }
+  &__header {
+    font-size: 1.2rem;
+    letter-spacing: 0.5rem;
+    margin-bottom: 1.5rem;
+    text-align: center;
+    text-transform: uppercase;
   }
 }
