style:💅moderating responsive

--- a/src/components/Card/Crawling/crawlCard.module.scss
+++ b/src/components/Card/Crawling/crawlCard.module.scss
@@ -15,7 +15,7 @@
     height: 427px;
     justify-content: center;
     padding: 16px 0;
-    width: 396px;
+    width: 100%;
   }
   &_box {
     height: 94%;
