--- a/src/components/LeftSideBar.module.scss
+++ b/src/components/LeftSideBar.module.scss
@@ -2,13 +2,14 @@
 
 .left_sidebar {
   height: 100vh;
-  position: relative;
+  left: 0;
+  position: sticky;
+  top: 0;
   width: $SIDEBAR_WIDTH;
 
   & button {
     bottom: 40px;
-    cursor: pointer;
     left: 40px;
-    position: fixed;
+    position: absolute;
   }
 }
