style : set center avatar image

--- a/src/components/Avatar.module.scss
+++ b/src/components/Avatar.module.scss
@@ -1,6 +1,8 @@
 .avatar {
   &__img {
     border-radius: 100%;
+    display: block;
+    margin: 0 auto;
   }
   &__color {
     --avatar-size: 80px;
