note : add todo for sticky header and profile tab

--- a/src/layout/profile/index.module.scss
+++ b/src/layout/profile/index.module.scss
@@ -89,6 +89,7 @@
       left: calc(50% - var(--tab-font));
     }
   }
+  // TODO : header 랑 고려해봐야함
   &.sticky {
     position: fixed;
     top: 0;
