--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -103,16 +103,18 @@
   flex-direction: column;
   align-items: center;
   border-top: 1px solid #DCDCDC;
+  font-family: 'Blender Pro', sans-serif;
   a {
-    font-size: var(--font-base);
+    font-size: calc(var(--font-base) * 1.2);
     margin: var(--font-base) 0;
     letter-spacing: 0.4em;
     cursor: pointer;
     &:last-child {
-      font-size: calc(var(--font-base) * 0.7);
+      font-size: calc(var(--font-base) * 0.8);
       position: absolute;
       bottom: 0;
       color: #696969;
+      letter-spacing: 0.1em;
     }
   }
 }
