--- a/src/components/LeftSideBar.module.scss
+++ b/src/components/LeftSideBar.module.scss
@@ -1,7 +1,7 @@
 @import '../utils/styles/variable.module.scss';
 
 .left_sidebar {
-  height: 100vh;
+  height: calc(100vh - 120px);
   left: 0;
   position: sticky;
   top: 0;
