--- a/src/components/RightSideBar.module.scss
+++ b/src/components/RightSideBar.module.scss
@@ -1,7 +1,7 @@
 @import '../utils/styles/variable.module.scss';
 
 .right_sidebar {
-  height: 100vh;
+  height: calc(100vh - 120px);
   position: sticky;
   right: 0;
   top: 0;
