fix : reusable profile layout

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -104,7 +104,7 @@
   align-items: center;
   border-top: 1px solid #DCDCDC;
   font-family: 'Blender Pro', sans-serif;
-  a {
+  button {
     font-size: calc(var(--font-base) * 1.2);
     margin: var(--font-base) 0;
     letter-spacing: 0.4em;
