style: 💅author position replace

--- a/src/components/Card/Crawling/crawlCard.module.scss
+++ b/src/components/Card/Crawling/crawlCard.module.scss
@@ -79,8 +79,9 @@
         a {
           color: #696969;
           font-size: 0.75rem;
-          height: 1rem;
+          // height: 1rem;
           margin-left: 0.5rem;
+          width: 150px;
         }
       }
       &_right {
