feat: ⚡toggle card

--- a/src/components/Card/Crawling/comment.module.scss
+++ b/src/components/Card/Crawling/comment.module.scss
@@ -1,3 +1,11 @@
+.comment__total__box{
+//   display: fixed;
+  height: 100vh;
+  left:0;
+  position: fixed;
+  top:0;
+  width: 100vw;
+}
 .comment__container{
     background: #0D0D0D;
     border-left: 1px solid #ffffff;
