--- a/src/layout/profile/index.module.scss
+++ b/src/layout/profile/index.module.scss
@@ -50,7 +50,23 @@ $select-background: #191919;
   }
 }
 
+.url_select_form {
+  display: flex;
+  input {
+    width: 60%;
+  }
+}
 
+.url_select {
+  width: 40%;
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  font-size: 16px;
+  color: #ffffff;
+  height: 48px;
+  margin-right: 5px;
+}
 
 .select {
   cursor: pointer;
@@ -61,6 +77,7 @@ $select-background: #191919;
   width: 100%;
   height: 45px;
 }
+
 .select_hidden {
   display: none;
   visibility: hidden;
