--- a/src/layout/qna/posts/PostLayout.module.scss
+++ b/src/layout/qna/posts/PostLayout.module.scss
@@ -1,6 +1,13 @@
 @import '../../../utils/styles/variable.module.scss';
 
 .post__container {
+  border: 1px solid $gray2;
+  border-bottom: 0;
+  border-top: none;
   margin: 0 auto;
   max-width: 820px;
+  min-height: 100vh;
+  padding: 120px 90px;
+  padding-bottom: 0;
+  @apply h-full;
 }
