--- a/src/utils/styles/editor.scss
+++ b/src/utils/styles/editor.scss
@@ -4,6 +4,12 @@
   background-color: $gray7;
 }
 
+body .tui-editor-contents *:not(table) {
+  color: $gray2;
+  font-size: 16px;
+  line-height: 24px;
+}
+
 .editor .tui-editor-defaultUI-toolbar,
 .tui-editor-defaultUI .CodeMirror-scroll {
   box-sizing: border-box;
