--- a/src/layout/qna/posts/CommentContent.module.scss
+++ b/src/layout/qna/posts/CommentContent.module.scss
@@ -5,20 +5,23 @@
   margin-bottom: 40px;
   margin-right: 16px;
   width: 100%;
+
+  & .comment__content {
+    width: 100%;
+  }
 }
 
 .comment__header_writer {
   display: flex;
+  margin-bottom: 8px;
 
-  &.-info {
-    margin-left: 16px;
+  &-info {
 
     h6 {
       color: $gray2;
       font-size: 16px;
       font-weight: bold;
       line-height: 24px;
-      margin-bottom: 4px;
     }
 
     span {
@@ -29,17 +32,40 @@
       font-weight: normal;
       letter-spacing: 0.1em;
       line-height: 14px;
-      margin-bottom: 8px;
       text-transform: uppercase;
     }
   }
 
-  .comment__footer_content {
-    display: flex;
-    justify-content: space-around;
+  
+}
+
+.comment__profile_img_wrap {
+  margin-right: 16px;
+  .comment__profile_img {
+    border-radius: 50%;
+    height: 48px;
+    width: 48px;
+  }
+}
+
+.comment__body_content {
+  color: $gray4;
+  font-size: 16px;
+  margin-bottom: 16px;
+}
+
+.comment__footer_content {
+  display: flex;
+  justify-content: space-between;
+
+  & .actionButton {
+    align-items: center;
+    display: flex; 
   }
 
-  .comment__profile_img {
-    margin-right: 16px;
+  & span {
+    color: $gray2;
+    font-size: 12px;
+    margin-left: 4px;
   }
 }
